{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 8,
  "lineage": "710a5f0b-b6ed-b384-e43b-2993f01e1aae",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:148761667844:internet-gateway/igw-0fa73ec94f208d19c",
            "id": "igw-0fa73ec94f208d19c",
            "owner_id": "148761667844",
            "tags": {
              "Name": "VPC-IG"
            },
            "tags_all": {
              "Name": "VPC-IG"
            },
            "vpc_id": "vpc-02779f7f8b400d4eb"
          },
          "dependencies": [
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "RT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:148761667844:route-table/rtb-0728f03b0552bbd4a",
            "id": "rtb-0728f03b0552bbd4a",
            "owner_id": "148761667844",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fa73ec94f208d19c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "New-VPC-RT"
            },
            "tags_all": {
              "Name": "New-VPC-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-02779f7f8b400d4eb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.IG",
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "RT-associations",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0891ea60dd8b7d880",
            "route_table_id": "rtb-0728f03b0552bbd4a",
            "subnet_id": "subnet-04a60e0083e0ef103"
          },
          "dependencies": [
            "aws_internet_gateway.IG",
            "aws_route_table.RT",
            "aws_subnet.New-VPC-Subnet",
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:148761667844:security-group/sg-03a8cf4d4a1908df2",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03a8cf4d4a1908df2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TCP protocol for HTTP",
                "from_port": 20,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 20
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TCP protocol for HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow",
            "name_prefix": "",
            "owner_id": "148761667844",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "New-VPC-SG"
            },
            "tags_all": {
              "Name": "New-VPC-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-02779f7f8b400d4eb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "New-VPC-Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:148761667844:subnet/subnet-04a60e0083e0ef103",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04a60e0083e0ef103",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "148761667844",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "New-VPC-Subnet"
            },
            "tags_all": {
              "Name": "New-VPC-Subnet"
            },
            "vpc_id": "vpc-02779f7f8b400d4eb"
          },
          "dependencies": [
            "aws_vpc.VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:148761667844:vpc/vpc-02779f7f8b400d4eb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f5813b0a22264eb0",
            "default_route_table_id": "rtb-0da0f0d79ce439470",
            "default_security_group_id": "sg-050a9982bb4553157",
            "dhcp_options_id": "dopt-091547ac6b3b9a432",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02779f7f8b400d4eb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0da0f0d79ce439470",
            "owner_id": "148761667844",
            "tags": {
              "Name": "New VPC"
            },
            "tags_all": {
              "Name": "New VPC"
            }
          }
        }
      ]
    }
  ]
}